# vss-signal-client

./: .gitignore  .vssclient_history  CMakeLists.txt  README.md
sample-app/: CMakeLists.txt  README.md
sample-app/src/: main.cpp
vss-signal-client/: CMakeLists.txt
vss-signal-client/inc/: common.h  signal-client-impl.h  signal-client.h
vss-signal-client/src/: signal-client-impl.cpp  signal-client.cpp
